После добавления текстовых страниц.

--- a/Cure.WebSite/Views/Biblioteka/Lekarstvakitay.cshtml
+++ b/Cure.WebSite/Views/Biblioteka/Lekarstvakitay.cshtml
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="user-content">
-                        <h3>Китайские лекарства</h3>
+                        <h3>Китайские лекарства. Лекарства для покупки в Китае</h3>
                         <p>
                             <b>Лекарства от простудных заболеваний и гриппа:</b>
                             <ul class="sec-procedure-list">
