--- a/Cure.WebSite/Views/Biblioteka/Lekarstvassoboy.cshtml
+++ b/Cure.WebSite/Views/Biblioteka/Lekarstvassoboy.cshtml
@@ -13,21 +13,22 @@
                 <div class="col-md-8">
                     <div class="user-content">
                         <h3>
-                            Список лекарственных средств,
-                            как рекомендуемых взять с собой в Китай.
+Лекарства, которые рекомендуем взять из дома в Китай        
+						   <!--Список лекарственных средств,
+                            как рекомендуемых взять с собой в Китай. -->
                         </h3>
                         <h4>Подготовил: доктор Попко Екатерина Александровна, город Уфа, мама Богдана.</h4>
                         <p>
                             <b>ОРВИ: </b> Эргоферон, гомеопатический препарат Инфлюцид.
                         </p>
                         <p>
-                            <b>Жаропонижающие: </b>Нурофен/Панадол
+                            <b>Жаропонижающие: </b>Нурофен, Панадол
                         </p>
                         <p>
-                            <b>Насморк:  </b> Аквалор, устройство для аспирации соплей, Називин, Изофра/Полидекса(после 2,5 лет)
+                            <b>Насморк:  </b> Аквалор, устройство для аспирации соплей, Називин, Изофра, Полидекса(после 2,5 лет)
                         </p>
                         <p>
-                            <b> Боль в горле: </b> 	Гексорал раствор (дети от года )/Биопарокс (старше 2,5 лет, универсально нос, горло, гортань)/гомеопатический Тонзилотрен
+                            <b> Боль в горле: </b> 	Гексорал раствор (дети от года), Биопарокс (старше 2,5 лет, универсально в нос, горло и гортань), гомеопатический Тонзилотрен
                         </p>
 
                         <p> <b> Отит: </b> Отипакс, Отофа </p>
@@ -43,24 +44,22 @@
                         </p>
                         <p>
                             <b>Антибактериальные препараты при инфекции верхних и нижних дыхательных путей и уха:</b> <ul class="sec-procedure-list">
-                                <li>флемоксин/ Флемоклав (если флемоксин использовался ранее в течении 3 месяцев)/Супракс</li>
-                                <li>
-                                    вильпрофен (действует на внутриклеточных возбудителей6 хламидии,микоплазмы)
-                                    сухой, приступообразный: Синекод капли с рождения/сироп синекод (дети старше 3 лет)
+                                <li>Флемоксин/Флемоклав (если флемоксин использовался ранее в течении 3 месяцев)/Супракс</li>
+                                <li> Вильпрофен (действует на внутриклеточных возбудителей: хламидии, микоплазмы)
                                 </li>
                             </ul>
                         </p>
                         <p>
                             <b>Нарушение работы желудочно-кишечного тракта:</b> <ul class="sec-procedure-list">
                                 <li>отравление: Смекта, Энтерофурил, Регидрон</li>
-                                <li>восстановление микрофлоры, лечение дисбиоза, инфекции: Энтерол/Линекс</li>
-                                <li>запор: Дюфалак/Глицериновые свечи</li>
+                                <li>восстановление микрофлоры, лечение дисбиоза, инфекции: Энтерол, Линекс</li>
+                                <li>запор: Дюфалак, Глицериновые свечи</li>
                             </ul>
                         </p>
                         <p><b>Прорезывание зубов:</b> Нурофен, Калгель, Дентокинд( гомеопатический препарат)</p>
-                        <p><b>Противоаллергические препараты:</b>Фенистил/Супрастин</p>
-                        <p><b>Стоматит: </b>Кандид раствор ,Метрогил денте гель (старше 6 лет)</p>
-                        <p><b>Герпес:</b>таблетки/крем Ацикловир</p>
+                        <p><b>Противоаллергические препараты:</b>Фенистил, Супрастин</p>
+                        <p><b>Стоматит: </b>Кандид раствор, Метрогил-денте гель (старше 6 лет)</p>
+                        <p><b>Герпес:</b>таблетки, крем Ацикловир</p>
                         <p><b>Коньюнктивит:</b>Альбуцид, Софрадекс</p>
                         <p><b>Травмы, ушибы, синяки:</b>Траумель крем, Гепариновая мазь,  детям старше 12 лет Долобене</p>
 
