--- a/Cure.WebSite/Views/Biblioteka/_BibliotekaMenu.cshtml
+++ b/Cure.WebSite/Views/Biblioteka/_BibliotekaMenu.cshtml
@@ -4,10 +4,10 @@
             <div class="col-lg-12">
                 <h1 class="all-pages-H1 has-underline">Библиотека</h1>
                 <ul class="all-pages-nav">
-                    <li @Html.Raw(Request.Url.AbsolutePath.ToLower().Contains("lekarstvassoboy") ? @"class=""active""" : @"")><a href="@Url.Action("Lekarstvassoboy", "Biblioteka")">Взять лекарства в Китай</a></li>
-                    <li @Html.Raw(Request.Url.AbsolutePath.ToLower().Contains("lekarstvakitay") ? @"class=""active""" : @"")><a href="@Url.Action("Lekarstvakitay", "Biblioteka")">Китайские лекарства</a></li>  -->
+                    <li @Html.Raw(Request.Url.AbsolutePath.ToLower().Contains("lekarstvassoboy") ? @"class=""active""" : @"")><a href="@Url.Action("Lekarstvassoboy", "Biblioteka")">Лекарства для поездки в Китай</a></li>
+                    <li @Html.Raw(Request.Url.AbsolutePath.ToLower().Contains("lekarstvakitay") ? @"class=""active""" : @"")><a href="@Url.Action("Lekarstvakitay", "Biblioteka")">Лекарства для покупки в Китае</a></li>  -->
                 </ul>
             </div>
-        </div>
+        </div>  
     </div><!-- END all-pages-head -->
 </div><!-- END container -->
