--- a/Cure.WebSite/Views/Info/_InfoMenu.cshtml
+++ b/Cure.WebSite/Views/Info/_InfoMenu.cshtml
@@ -6,6 +6,8 @@
                 <ul class="all-pages-nav">
                     <li @Html.Raw(Request.Url.AbsolutePath.Contains("Rashodi") ? @"class=""active""" : @"")><a href="@Url.Action("Rashodi", "Info")">Расходы на лечение в Китае </a></li>
                     <li @Html.Raw(Request.Url.AbsolutePath.Contains("Pogoda") ? @"class=""active""" : @"")><a href="@Url.Action("Pogoda", "Info")">Погода в Юньчэн</a></li>
+                    <li @Html.Raw(Request.Url.AbsolutePath.Contains("Soft") ? @"class=""active""" : @"")><a href="@Url.Action("Soft", "Info")">Программное обечпечение для Китая</a></li>
+                    <li @Html.Raw(Request.Url.AbsolutePath.Contains("Internet") ? @"class=""active""" : @"")><a href="@Url.Action("Internet", "Info")">Особенности использования интернета в Китае</a></li>
                 </ul>
             </div>
         </div>
