--- a/Cure.WebSite/Views/Shared/_MainMenuExt.cshtml
+++ b/Cure.WebSite/Views/Shared/_MainMenuExt.cshtml
@@ -19,7 +19,9 @@
                 <div class="megamenu-title">Информация</div>
                 <ul class="megamenu-list">
 					<li><a href="@Url.Action("Rashodi", "Info")">Расходы на лечение в Китае</a></li>
-					<li><a href="@Url.Action("Pogoda", "Info")">Погода в Юньчэне</a></li>
+                    <li><a href="@Url.Action("Pogoda", "Info")">Погода в Юньчэне</a></li>
+                    <li><a href="@Url.Action("Soft", "Info")">Программное обечпечение для Китая</a></li>
+					<li><a href="@Url.Action("Internet", "Info")">Особенности использования интернета в Китае</a></li>
                 </ul>
             </div>
             <div class="megamenu-col">
@@ -32,8 +34,8 @@
             <div class="megamenu-col">
                 <div class="megamenu-title">Библиотека</div>
                 <ul class="megamenu-list">
-                    <li><a href="@Url.Action("Lekarstvassoboy", "Biblioteka")">Лекарства в Китай</a></li>
-                    <li><a href="@Url.Action("Lekarstvakitay", "Biblioteka")">Китайские лекарства</a></li>
+                    <li><a href="@Url.Action("Lekarstvassoboy", "Biblioteka")">Лекарства для поездки в Китай</a></li>
+                    <li><a href="@Url.Action("Lekarstvakitay", "Biblioteka")">Лекарства для покупки в Китае</a></li>
                 </ul>
             </div>
         </div>
