Начало доработок Отзывы

--- a/Cure.WebSite/Views/Mension/Index.cshtml
+++ b/Cure.WebSite/Views/Mension/Index.cshtml
@@ -36,6 +36,10 @@
                         {
                             <a class="btn btn-green-outlined js-show-popup" data-pop="pop-add-testimonial">НАПИСАТЬ ОТЗЫВ</a>
                         }
+                        else
+                        {
+                            <a class="btn btn-green-outlined" href="@Url.Action("Registration", "Preorder")">НАПИСАТЬ ОТЗЫВ</a>
+                        }
                     </div>
                 </div>
             </div><!-- END all-pages-head -->
