--- a/Cure.WebSite/Views/Shared/_Mension.cshtml
+++ b/Cure.WebSite/Views/Shared/_Mension.cshtml
@@ -11,7 +11,7 @@
                 <span class="writer-city">@Model.CopyUserLocation</span>
             </div>
             <div class="review-more">
-                <a class="btn btn-light" href="@Url.Action("Index", "Children")">Все отзывы</a>
+                <a class="btn btn-light" href="@Url.Action("Index", "Mension")">Все отзывы</a>
             </div>
         </div>
     </div>
