--- a/Cure.WebSite/Views/Preorder/Registration.cshtml
+++ b/Cure.WebSite/Views/Preorder/Registration.cshtml
@@ -3,7 +3,7 @@
     <div class="all-pages-head preorder-head">
        <!-- <h1 class="main-page-title">Запись на лечение</h1> -->
         <a class="preorder-head-close js-page-back" role="button"href="javascript:history.back()"></a> 
-        <h2 class="preorder-title">Для записи на лечение необходима регистрация</h2>
+        <h2 class="preorder-title">Для записи на лечение или отзывов необходима регистрация</h2>
         <h4 class="forms-heading">
             Зарегистрировавшись, Вы сможете:
         </h4>
