--- a/Cure.WebSite/Views/News/Index.cshtml
+++ b/Cure.WebSite/Views/News/Index.cshtml
@@ -1,11 +1,12 @@
 ﻿@using System.Configuration
 @using Cure.DataAccess
 @using Cure.Utils
+@using Cure.WebSite.Models
 @{
     ViewBag.Title = "Новости и события";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model IEnumerable<NewsPage>
+@model IEnumerable<NewsPageModel>
 
 <div class="main has-custom-bg" role="main">
     @using (Ajax.BeginForm("Index", "News", null, null, new { id = "newsform" }))
@@ -37,7 +38,7 @@
                                         @if (Model.Any() && Model.Count() > i * 4)
                                         {
                                             <a class="news-item-link" href="@Url.Action(Model.ToList()[i * 4].Alias, "News")">
-                                                <img class="news-item-image" src="~/Content/images/news-page/02-big.jpg" alt="" />
+                                                <img class="news-item-image" src="@Html.Raw(Model.ToList()[i * 4].MainPictureSrc)" alt="" />
                                                 <span class="news-item-date">@Html.Raw(Model.ToList()[i * 4].Date.HasValue ? Model.ToList()[i * 4].Date.Value.ToString("dd.MM.yyyy") : "<Дата не указана>")</span>
                                                 <span class="news-item-name">"@Model.ToList()[i * 4].Subject"</span>
                                             </a>
@@ -48,7 +49,7 @@
                                             @if (Model.Any() && Model.Count() > i * 4 + 1)
                                             {
                                                 int cnt = i * 4 + 1;
-                                                foreach (NewsPage news in Model.Skip(i * 4 + 1).Take(3))
+                                                foreach (NewsPageModel news in Model.Skip(i * 4 + 1).Take(3))
                                                 {
                                                     <li class="news-aside-item">
                                                         <a class="news-aside-item-link" href="@Url.Action(Model.ToList()[cnt].Alias, "News")">
