--- a/Cure.WebSite/Views/News/_News.cshtml
+++ b/Cure.WebSite/Views/News/_News.cshtml
@@ -1,13 +1,14 @@
 ﻿@using System.Configuration
 @using Cure.DataAccess
 @using Cure.Utils
-@model IEnumerable<NewsPage>
+@using Cure.WebSite.Models
+@model IEnumerable<NewsPageModel>
 @if (Model.Any())
 {
     <li class="news-item">
         <div class="col-lg-6 col-md-6">
             <a class="news-item-link" href="@Url.Action(Model.ToList()[0].Alias, "News")">
-                <img class="news-item-image" src="~/Content/images/news-page/02-big.jpg" alt="" />
+                <img class="news-item-image" src="@Html.Raw(Model.ToList()[0].MainPictureSrc)" alt="" />
                 <span class="news-item-date">@Html.Raw(Model.ToList()[0].Date.HasValue ? Model.ToList()[0].Date.Value.ToString("dd.MM.yyyy") : "<Дата не указана>")</span>
                 <span class="news-item-name">"@Model.ToList()[0].Subject"</span>
             </a>
@@ -19,11 +20,11 @@
                     @if (Model.Any() && Model.Count() > 1)
                     {
                         int cnt = 1;
-                        foreach (NewsPage news in Model.ToList().Skip(1).Take(3))
+                        foreach (NewsPageModel news in Model.ToList().Skip(1).Take(3))
                         {
                             <li class="news-aside-item">
                                 <a class="news-aside-item-link" href="@Url.Action(Model.ToList()[cnt].Alias, "News")">
-                                    <img class="news-aside-item-image" src="~/Content/images/news-page/03-aside.jpg" alt="" />
+                                    <img class="news-aside-item-image" src="@Html.Raw(Model.ToList()[cnt].MainPictureSrc)" alt="" />
                                     <span class="news-aside-item-name">@Model.ToList()[cnt].Subject</span>
                                     <span class="news-aside-item-date">@Html.Raw(Model.ToList()[cnt].Date.HasValue ? Model.ToList()[cnt].Date.Value.ToString("dd.MM.yyyy") : "<Дата не указана>")</span>
                                 </a>
