changes from Oleg

--- a/Cure.WebSite/Views/Department/Yancheng2.cshtml
+++ b/Cure.WebSite/Views/Department/Yancheng2.cshtml
@@ -169,7 +169,9 @@
                             <p>
                                 Детский церебральный паралич – одна из главных причин детской инвалидности. ДЦП считается трудноизлечимой болезнью, но не относится к неизлечимым заболеваниям. Совместными усилиями врача и родителей, любовью, терпением, вниманием и кропотливой работой мы стараемся максимально приблизить тот день, когда ребенок с церебральным параличом сможет сам войти в новую здоровую жизнь.
                             </p>
-                            <a href="http://dcp-china.ru/Children" class="btn btn-light">НАШИ ДЕТИ</a>
+                            <p class="txt-center">
+                                <a href="http://dcp-china.ru/Children" class="btn btn-light">НАШИ ДЕТИ</a>
+                            </p>
                         </div>
                     </div>
                     <!--<div class="col-md-3">
