--- a/Cure.WebSite/Views/Shared/_MainMenuExt.cshtml
+++ b/Cure.WebSite/Views/Shared/_MainMenuExt.cshtml
@@ -37,7 +37,7 @@
                 <ul class="megamenu-list">
                     <li><a href="@Url.Action("Lekarstvassoboy", "Biblioteka")">Лекарства для поездки в Китай</a></li>
                     <li><a href="@Url.Action("Lekarstvakitay", "Biblioteka")">Лекарства для покупки в Китае</a></li>
-                    <li><a href="@Url.Action("Statyinovosti", "Biblioteka")">Статьи и публикации на различные темы, касающиеся диагностики и лечения детских неврологических заболеваний.</a></li>
+                    <li><a href="@Url.Action("Statyinovosti", "Biblioteka")">Статьи и новости</a></li>
                 </ul>
             </div>
         </div>
