--- a/Cure.WebSite/Views/News/Details.cshtml
+++ b/Cure.WebSite/Views/News/Details.cshtml
@@ -12,7 +12,7 @@
                         <div class="news-inner">
                             <div class="user-content">
                                 <div class="back">
-                                    <a class="back-link" href="@Url.Action("Index", "News")">&larr; К новостям и событиям</a>
+                                    <a class="back-link" href="@Url.Action("Index", "News")">&larr; К новостям и акциям</a>
                                 </div>
                                 <div class="news-inner-header clearfix">
                                     <div class="news-inner-header-image" style="background-image: url('@Html.Raw(Model.MainPictureSrc(Server))')"></div>
@@ -21,7 +21,7 @@
                                 </div>
                                 @Html.Raw(Model.Text)
                             </div>
-                            @*<ul class="social-list">
+                            <ul class="social-list">
                                 <li class="social-list-item">
                                     <a class="social-list-item-link vk" href="#" title="Вконтакте">
                                         <i class="social-list-item-icon fa fa-vk"></i>
@@ -37,10 +37,7 @@
                                         <i class="social-list-item-icon fa fa-facebook"></i>
                                     </a>
                                 </li>
-                            </ul>*@
-                            <script type="text/javascript" src="http://yastatic.net/es5-shims/0.0.2/es5-shims.min.js" charset="utf-8"></script>
-                            <script type="text/javascript" src="http://yastatic.net/share2/share.js" charset="utf-8"></script>
-                            <div style="text-align: left;" class="gallery-share ya-share2" data-services="vkontakte,facebook,odnoklassniki,moimir" data-counter=""></div>
+                            </ul>
                             <div class="user-content">
                                 <div class="video-helper clearfix">
                                     <h4>Ваш видеопомощник</h4>
@@ -53,7 +50,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        @*<h4 class="aside-title">Наш магазин</h4>
+                        <h4 class="aside-title">Наш магазин</h4>
                         <ul class="aside-list">
                             <li class="aside-list-item">
                                 <a class="aside-list-item-link" href="#">
@@ -65,7 +62,7 @@
                                     <img class="aside-list-item-image" src="~/content/images/news-page/banner-item.jpg" alt="" />
                                 </a>
                             </li>
-                        </ul>*@
+                        </ul>
                     </div>
                 </div>
             </div>
