--- a/Cure.WebSite/Views/News/Index.cshtml
+++ b/Cure.WebSite/Views/News/Index.cshtml
@@ -17,16 +17,16 @@
                         <h1 class="all-pages-H1">Новости и события</h1>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                        @*<form class="rss-form" action="#" method="post">
-                            <label class="rss-text" for="rss-email">ПОДПИШИТЕСЬ НА РАССЫЛКУ</label>
+                        <form class="rss-form" action="#" method="post">
+                            <label class="rss-text" for="rss-email">Сразу на почту</label>
                             <input id="rss-email" class="rss-field" type="text" name="rss_email" placeholder="Ваш E-mail" autocapitalize="off" autocorrect="off" autocomplete="email" />
                             <button class="rss-submit" type="submit"></button>
-                        </form>*@
+                        </form>
                     </div>
                 </div>
             </div><!-- END all-pages-head -->
-            @using (Ajax.BeginForm("Index", "News", null, null, new { id = "newsform" }))
-            {
+
+            @using (Ajax.BeginForm("Index", "News", null, null, new { id = "newsform" })) {
 
                 <div class="all-pages-body">
                     <div class="row">
@@ -86,6 +86,6 @@
 
             }
 
-        </div><!-- END container -->
-    </section>
+            </div><!-- END container -->
+        </section>
 </div><!-- END main -->
