--- a/Cure.WebSite/Views/Home/Index.cshtml
+++ b/Cure.WebSite/Views/Home/Index.cshtml
@@ -35,7 +35,62 @@
             </div>
         </div><!-- END sec-intro-form -->
     </section><!-- END sec-intro -->
+    
+    <section class="sec-articles">
+        <div class="container">
+            <div class="row">
+                <div class="all-pages-head col-lg-12">
+                    <h2 class="main-page-title sec-articles-title">Новости и события</h2>
+                </div>
+            </div>
+            <div class="row">
+                <ul id="js-for-load-children" class="news">
+                    @*@using (Ajax.BeginForm("Index", "News", null, null, new { id = "newsform" }))*@
 
+                    <li class="news-item">
+                        <div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
+                            @if (((IEnumerable<NewsPageModel>)ViewBag.News).Any() && ((IEnumerable<NewsPageModel>)ViewBag.News).Count() > 4)
+                            {
+                                <a class="news-item-link" href="@Url.Action(((IEnumerable<NewsPageModel>)ViewBag.News).ToList()[0].Alias, "News")" target="_blank">
+                                    <span class="news-item-image" style="background-image: url('@Html.Raw(((IEnumerable<NewsPageModel>)ViewBag.News).ToList()[0].MainPictureSrc(Server))');"></span>
+                                    <span class="news-item-date">@Html.Raw(((IEnumerable<NewsPageModel>)ViewBag.News).ToList()[0].Date.HasValue ? ((IEnumerable<NewsPageModel>)ViewBag.News).ToList()[0].Date.Value.ToString("dd.MM.yyyy") : "<Дата не указана>")</span>
+                                    <span class="news-item-name">"@Html.Raw(((IEnumerable<NewsPageModel>)ViewBag.News).ToList()[0].Subject)"</span>
+                                </a>
+                            }
+                        </div>
+                        <div class="col-lg-6 col-md-4 col-sm-12 col-xs-12">
+                            <ul class="news-aside">
+                                @if (((IEnumerable<NewsPageModel>)ViewBag.News).Any() && ((IEnumerable<NewsPageModel>)ViewBag.News).Count() > 1)
+                                {
+                                    int cnt = 1;
+                                    foreach (NewsPageModel news in ((IEnumerable<NewsPageModel>)ViewBag.News).Skip(1).Take(3))
+                                    {
+                                        <li class="news-aside-item">
+                                            <a class="news-aside-item-link" href="@Url.Action(((IEnumerable<NewsPageModel>)ViewBag.News).ToList()[cnt].Alias, "News")" target="_blank">
+                                                <span class="news-aside-item-image-wrapper">
+                                                    <span class="news-aside-item-image" style="background-image: url('@Html.Raw(((IEnumerable<NewsPageModel>)ViewBag.News).ToList()[cnt].MainPictureSrc(Server))');"></span>
+                                                </span>
+                                                <span class="news-aside-item-name">@Html.Raw(((IEnumerable<NewsPageModel>)ViewBag.News).ToList()[cnt].Subject)</span>
+                                                <span class="news-aside-item-date">@Html.Raw(((IEnumerable<NewsPageModel>)ViewBag.News).ToList()[cnt].Date.HasValue ? ((IEnumerable<NewsPageModel>)ViewBag.News).ToList()[cnt].Date.Value.ToString("dd.MM.yyyy") : "<Дата не указана>")</span>
+                                            </a>
+                                        </li>
+                                        cnt++;
+                                    }
+                                }
+                            </ul>
+                        </div>
+                    </li>
+
+                </ul>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 txt-center">
+                    <a class="btn btn-light" href="@Url.Action("Index", "News")">Все новости и события</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <section class="sec-clinic"> 
         <div class="container">
             <div class="row">
