--- a/Cure.WebSite/Views/Home/Index.cshtml
+++ b/Cure.WebSite/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Cure.WebSite.Models
+@{
     ViewBag.Title = "Официальный сайт больницы лечение ДЦП в Китае, город Юньчэн";
 	ViewBag.Description = "Описание больниц по лечению ДЦП, аутизма, задержка речи, задержки развития и других неврологических заболеваний";
     Layout = "~/Views/Shared/_Layout.cshtml";
