Изменения по вёрстке и финальный фокумент с правками по Счёту.

--- a/Cure.WebSite/Views/Department/Yancheng1.cshtml
+++ b/Cure.WebSite/Views/Department/Yancheng1.cshtml
@@ -803,6 +803,15 @@
                             <a class="docs-card-link js-popup-gallery" rel="documents" href="~/Content/images/hospital/2yuan_litcenziya.jpg"></a>
                         </div>
                     </li>
+					<li class="docs-item">
+					<div class="price-list is-wide">
+                               <a class="price-list-link has-icon icon-pdf" href="~/Content/pdf/usloviyaVN2017.pdf" target="_blank" title="Скачать документ">
+                                Условия и правила лечения в Второй народной многопрофильной больнице города Юньчэн
+                            </a>
+                           
+                            
+                        </div>
+						</li>
                     <!-- <li class="docs-item">
                         <div class="docs-card">
                             <div class="docs-card-img">
