--- a/Cure.WebSite/Views/News/Details.cshtml
+++ b/Cure.WebSite/Views/News/Details.cshtml
@@ -12,7 +12,7 @@
                         <div class="news-inner">
                             <div class="user-content">
                                 <div class="back">
-                                    <a class="back-link" href="@Url.Action("Index", "News")">&larr; К новостям и акциям</a>
+                                    <a class="back-link" href="@Url.Action("Index", "News")">&larr; К новостям и событиям</a>
                                 </div>
                                 <div class="news-inner-header clearfix">
                                     <div class="news-inner-header-image" style="background-image: url('@Html.Raw(Model.MainPictureSrc(Server))')"></div>
