--- a/Cure.WebSite/Views/Preorder/Registration.cshtml
+++ b/Cure.WebSite/Views/Preorder/Registration.cshtml
@@ -56,8 +56,8 @@
             <div class="popup-registr preorder-registr">
                 <div class="popup-head js-tabs-pre-registr">
                     <div class="popup-title registr-tabshead">
-                        <a class="registr-tabshead-link js-tabs-link active" data-tab="pre-registr-tab-1" role="button">Регистрация</a>
-                        <a class="registr-tabshead-link js-tabs-link" data-tab="pre-registr-tab-2" role="button">Вход</a>
+                        <a class="registr-tabshead-link js-tabs-link" data-tab="pre-registr-tab-1" role="button">Регистрация</a>
+                        <a class="registr-tabshead-link js-tabs-link active" data-tab="pre-registr-tab-2" role="button">Вход</a>
                     </div>
                 </div>
                 <div class="popup-body js-tabs-body">
