--- a/Cure.WebSite/Views/Shared/_Preorder.cshtml
+++ b/Cure.WebSite/Views/Shared/_Preorder.cshtml
@@ -43,7 +43,7 @@
             <div class="fastorder-date">
                 <label class="fastorder-label">Заезд</label>
                 @*<input class="forms-input has-icon ico-calendar" type="text" placeholder="Нет даты">*@
-                @Html.TextBox("datefrom", (Session["OrderDateFrom"] == null ? "" : ((DateTime)Session["OrderDateFrom"]).ToString("dd.MM.yyyy")), new
+                @Html.TextBox("datefrom", (Session["OrderDateFrom"] == null ? DateTime.Today.AddMonths(1).ToString("dd-MM-yyyy") : ((DateTime)Session["OrderDateFrom"]).ToString("dd.MM.yyyy")), new
                 {
                     @id = "datefrom",
                     @placeholder = "Нет даты",
@@ -53,7 +53,7 @@
             <div class="fastorder-date">
                 <label class="fastorder-label">Отъезд</label>
                 @*<input class="forms-input has-icon ico-calendar" type="text" placeholder="Нет даты">*@
-                @Html.TextBox("dateto", (Session["OrderDateTo"] == null ? "" : ((DateTime)Session["OrderDateTo"]).ToString("dd.MM.yyyy")), new
+                @Html.TextBox("dateto", (Session["OrderDateTo"] == null ? DateTime.Today.AddMonths(3).ToString("dd-MM-yyyy") : ((DateTime)Session["OrderDateTo"]).ToString("dd.MM.yyyy")), new
                 {
                     @id = "dateto",
                     @placeholder = "Нет даты",
@@ -65,8 +65,8 @@
             <label class="fastorder-label">Пациенты</label>
             <div class="fastorder-counter js-counter" data-max="2">
                 <a class="counter-btn btn-dwn">-</a>
-                @*<input class="counter-rez" type="text" value="0" readonly>*@
-                @Html.TextBox("pacients", Session["OrderPacientCount"] ?? 0, new
+                @*<input class="counter-rez" type="text" value="1" readonly>*@
+                @Html.TextBox("pacients", Session["OrderPacientCount"] ?? 1, new
                 {
                     @id = "pacients",
                     @readonly = "true",
@@ -79,8 +79,8 @@
             <label class="fastorder-label">Сопровождают</label>
             <div class="fastorder-counter js-counter" data-max="4">
                 <a class="counter-btn btn-dwn">-</a>
-                @*<input class="counter-rez" type="text" value="0" readonly>*@
-                @Html.TextBox("sputniks", Session["OrderSputnikCount"] ?? 0, new
+                @*<input class="counter-rez" type="text" value="1" readonly>*@
+                @Html.TextBox("sputniks", Session["OrderSputnikCount"] ?? 1, new
                 {
                     @id = "sputniks",
                     @readonly = "true",
