Изменения от Александра.

--- a/Cure.WebSite/Views/China/Dobratsa.cshtml
+++ b/Cure.WebSite/Views/China/Dobratsa.cshtml
@@ -114,7 +114,9 @@
                             Сиань – Юньчэн
                         </p>
                         <ul class="sec-procedure-list">
-                            <li>Рейс номер D2530, отправление из Сианя в 19:05, прибытие в Юньчэн 20:23
+                            <li>Рейс номер D2564, отправление из Сианя в 18:44, прибытие в Юньчэн 20:08
+                        Стоимость билета в I класс 90 юаня, во II класс 69 юаней;</li>
+						<li>Рейс номер D2534, отправление из Сианя в 19:05, прибытие в Юньчэн 20:23
                         Стоимость билета в I класс 90 юаня, во II класс 69 юаней;</li>
                             
                         </ul>
