--- a/Cure.WebSite/Views/Procedure/Implantation.cshtml
+++ b/Cure.WebSite/Views/Procedure/Implantation.cshtml
@@ -28,12 +28,19 @@
             <div class="slimpage-body">
                 <div class="user-content">
                     <p>
-					Метод имплантации коллагеновых нитей является уникальным сочетанием современной западной медицины и традиционной китайской медицины. По сути, это одна из разновидностей современной акупунктуры.
+					Метод имплантации коллагеновых нитей является уникальным сочетанием наработок современной западной и традиционной китайской медицины. По сути, это одна из наиболее эффективных разновидностей акупунктуры.
 					</p>
 					<p>
-					Процедура имплантации простая и заключается в введении кусочков нити длиной от 0,5 до 5–10 см с помощью игл на необходимую глубину в биоактивную (акупунктурную) точку или одновременно в несколько точек, соединяя их. Кончики кетгута обрезаются, а оставшаяся в глубине тканей нить постепенно рассасывается, оказывая длительное стимулирующее воздействие. При введении нити в биоактивные точки в болевой области, данная область быстро оздоравливается, так как коллагеновая нить — это инородное вещество для организма, и следовательно, в это место организмом будут брошены все силы, а сама коллагеновая нить полностью рассасывается через 3-4 недели.
+					Процедура имплантации проста и заключается в введении отрезков нити длиной от 5 мм до 5–10 см в одну или сразу несколько акупунктурных зон. Производится имплантация с использованием тонких игл. 
 					</p>
-					<p>Достоинства метода заключается в ощутимой положительной эффективности, безопасности, непрерывности и пролонгированности лечебного воздействия. Процедура проводится один раз в 3-4 недели в зависимости от степени тяжести заболеваний.
+					<p>
+					Коллагеновые нити погружаются на заданную глубину и соединяются в одной точке. Кончики кетгута обрезаются. Оставленная в глубине тканей нить постепенно рассасывается, оказывая длительное стимулирующее воздействие на биологически активные зоны. 
+					</p>
+					<p>
+					При введении нити в акупунктурные точки болевой области, оздоровление происходит в ускоренном темпе. Коллагеновая нить – инородное тело; в место введения нити организм направляет все силы для борьбы с воспалением. Сама коллагеновая нить бесследно рассасывается через 3-4 недели.
+					</p>
+					<p>
+					Достоинства метода заключается в высокой эффективности и безопасности пролонгированного лечебного воздействия. Процедура проводится один раз в 3-4 недели в зависимости от степени тяжести заболеваний.
                     </p>
                 </div>
             </div>
